--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -102,6 +102,6 @@
   <p id="question16-result"></p>
 
   <h1>ANOTHER TOPIC</h1>
-  <p id="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit <a href="JavaScript:void(0)" onclick="expandParagraph()">Readmore</a></p>
+  <p id="paragraph">Lorem is a  ipsum dolor sit amet consectetur adipisicing elit <a href="JavaScript:void(0)" onclick="expandParagraph()">Readmore</a></p>
 </body>
 </html>
